--- a/articles/azure-vmware/index.yml
+++ b/articles/azure-vmware/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: dikamath
   ms.author: dikamath
   ms.date: 11/19/2020
-  ms.openlocfilehash: c460df29183cbf40bee1f539435669121b3ee6ed
-  ms.sourcegitcommit: 4c89d9ea4b834d1963c4818a965eaaaa288194eb
+  ms.openlocfilehash: dc7d344ea33686cc32d2817886ee2cafa829cf1b
+  ms.sourcegitcommit: 49ea056bbb5957b5443f035d28c1d8f84f5a407b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/04/2020
-  ms.locfileid: "96608420"
+  ms.lasthandoff: 02/09/2021
+  ms.locfileid: "100006718"
 landingContent:
 - title: Azure VMware Solution について
   linkLists:
@@ -129,7 +129,7 @@ landingContent:
     - text: Azure PowerShell
       url: /powershell/module/az.vmware
     - text: よく寄せられる質問
-      url: faq.md
+      url: faq.yml
 - title: トラブルシューティング
   linkLists:
   - linkListType: reference
