--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -3,19 +3,19 @@ title: Azure Application Gateway のドキュメント
 summary: アプリケーション ゲートウェイを作成する方法を説明します。 このドキュメントは、ご自分の Azure リソースへの Web トラフィックを計画、デプロイ、および管理するのに役立ちます。
 metadata:
   title: Azure Application Gateway のドキュメント
-  description: クラウドベースのネットワーク セキュリティ サービスである Azure Firewall をデプロイする方法について説明します。
+  description: Web アプリケーションへのトラフィックを管理できる Web トラフィック ロード バランサーである Azure Application Gateway について説明します。
   services: application-gateway
   ms.service: application-gateway
   ms.topic: landing-page
   author: vhorne
   ms.author: victorh
-  ms.date: 03/24/2020
-  ms.openlocfilehash: df125820d56aa5c2edda29306c69cef00e012a12
-  ms.sourcegitcommit: 31cfd3782a448068c0ff1105abe06035ee7b672a
+  ms.date: 02/08/2021
+  ms.openlocfilehash: 7493683355ea3be24bf086dab1a968f9f03b1e05
+  ms.sourcegitcommit: d1b0cf715a34dd9d89d3b72bb71815d5202d5b3a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/10/2021
-  ms.locfileid: "98059536"
+  ms.lasthandoff: 02/08/2021
+  ms.locfileid: "99833254"
 landingContent:
 - title: Application Gateway について
   linkLists:
