--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -62,6 +62,9 @@
           href: zone-redundancy.md
         - name: レジストリのベスト プラクティス
           href: container-registry-best-practices.md
+        - name: マルチアーキテクチャ イメージ
+          href: push-multi-architecture-images.md
+          displayName: multi-architecture
         - name: パブリック イメージの管理
           href: buffer-gate-public-content.md
     - name: 操作方法ガイド
