--- a/articles/iot-central/government/toc.yml
+++ b/articles/iot-central/government/toc.yml
@@ -5,6 +5,7 @@
     - name: Azure IoT Central を使用した政府機関ソリューションの構築
       href: overview-iot-central-government.md
 - name: チュートリアル
+  expanded: true
   items:
     - name: 接続された廃棄物管理アプリを作成する
       href: tutorial-connected-waste-management.md
