--- a/articles/resource-mover/toc.yml
+++ b/articles/resource-mover/toc.yml
@@ -12,6 +12,8 @@
   items:
     - name: Azure VM を別のリージョンに移動する
       href: tutorial-move-region-virtual-machines.md
+    - name: 暗号化された Azure VM を別のリージョンに移動する
+      href: tutorial-move-region-encrypted-virtual-machines.md
     - name: SQL リソースを別のリージョンに移動する
       href: tutorial-move-region-sql.md
 - name: 概念
