--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 02/12/2020
-  ms.openlocfilehash: bcba2b48fdecda311ce349f90ba43023b906bd44
-  ms.sourcegitcommit: d22a86a1329be8fd1913ce4d1bfbd2a125b2bcae
+  ms.openlocfilehash: 29f3b0bf0a00c9e4e238e8bb514f80e7451d30a6
+  ms.sourcegitcommit: 49ea056bbb5957b5443f035d28c1d8f84f5a407b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/26/2020
-  ms.locfileid: "96186407"
+  ms.lasthandoff: 02/09/2021
+  ms.locfileid: "100007756"
 landingContent:
 - title: Azure Digital Twins について
   linkLists:
@@ -23,6 +23,14 @@ landingContent:
     links:
     - text: Azure Digital Twins とは
       url: overview.md
+  - linkListType: concept
+    links:
+    - text: カスタム モデル
+      url: concepts-models.md
+    - text: デジタル ツインとツイン グラフ
+      url: concepts-twins-graph.md
+    - text: クエリ言語
+      url: concepts-query-language.md
 - title: クイックスタートの概要
   linkLists:
   - linkListType: quickstart
@@ -43,20 +51,6 @@ landingContent:
     links:
     - text: エンドツーエンドのソリューションを接続する
       url: tutorial-end-to-end.md
-- title: 学習する
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: カスタム モデル
-      url: concepts-models.md
-  - linkListType: concept
-    links:
-    - text: デジタル ツインとツイン グラフ
-      url: concepts-twins-graph.md
-  - linkListType: concept
-    links:
-    - text: クエリ言語
-      url: concepts-query-language.md
 - title: 開発
   linkLists:
   - linkListType: how-to-guide
@@ -115,3 +109,19 @@ landingContent:
     links:
     - text: Logic Apps コネクタ用のカスタム Swagger
       url: /samples/azure-samples/digital-twins-custom-swaggers/azure-digital-twins-custom-swaggers/
+- title: Microsoft Learn を使用したシナリオベースの学習
+  linkLists:
+  - linkListType: learn
+    links:
+    - text: ラーニング パス:Azure Digital Twins を使用した開発
+      url: /learn/paths/develop-azure-digital-twins/
+  - linkListType: learn
+    links:
+    - text: 'Learn モジュール: Azure Digital Twins の概要'
+      url: /learn/modules/develop-with-azure-digital-twins/introduction-to-azure-digital-twins/
+    - text: 'Learn モジュール: チョコレート工場生産ライン用に Azure Digital Twins のグラフを作成する'
+      url: /learn/modules/develop-with-azure-digital-twins/build-azure-digital-twins-graph-for-chocolate-factory/
+    - text: 'Learn モジュール: Azure Digital Twins にデータを取り込む'
+      url: /learn/modules/develop-with-azure-digital-twins/ingest-data-into-azure-digital-twins/
+    - text: 'Learn モジュール: Azure Digital Twins からダウンストリーム サービスに出力する'
+      url: /learn/modules/develop-with-azure-digital-twins/route-output-from-azure-digital-twins-to-downstream-services/
