--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 01/29/2021
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 2f792ffb95323444d8666c4c676025995f5db438
-  ms.sourcegitcommit: 706e7d3eaa27f242312d3d8e3ff072d2ae685956
+  ms.openlocfilehash: 58b5b8917aeeefb918914a598655da962019de34
+  ms.sourcegitcommit: 126ee1e8e8f2cb5dc35465b23d23a4e3f747949c
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 02/09/2021
-  ms.locfileid: "99979472"
+  ms.lasthandoff: 02/10/2021
+  ms.locfileid: "100102973"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -793,7 +793,7 @@ productDirectory:
     azureCategories:
     - hybrid
     url: /azure-stack/
-  - title: Azure Stack HCI (プレビュー)
+  - title: Azure Stack HCI
     summary: ハイパーコンバージド インフラストラクチャと Azure およびハイブリッド サービスを統合して、オンプレミスで仮想ワークロードを実行
     imageSrc: https://static.docs.com/ui/media/product/azure/stack-hci.svg
     azureCategories:
