--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -30,6 +30,9 @@
     - name: バージョン管理ポリシー
       href: concepts-version-policy.md
       displayName: 'version, postgresql'
+    - name: 既知の問題と制限事項
+      href: concepts-known-issues-limitations.md
+      displayName: 'issues, limitations, postgresql'
 - name: シングル サーバー
   expanded: true
   items:
@@ -488,7 +491,7 @@
           items:
             - name: Azure portal
               href: flexible-server/how-to-maintenance-portal.md
-        - name: ネットワーキング
+        - name: ネットワーク
           items:
             - name: プライベート アクセス (VNet 統合)
               items:
