--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -32,6 +32,8 @@
       href: tutorial-deploy-vmware-hcx.md
     - name: 8 - プライベート クラウドをスケーリングする
       href: tutorial-scale-private-cloud.md
+    - name: 9 - プライベート クラウドを削除する
+      href: tutorial-delete-private-cloud.md
 - name: 概念
   items:
     - name: プライベート クラウドとクラスター
