commit translated contents

--- a/articles/azure-app-configuration/index.yml
+++ b/articles/azure-app-configuration/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: azure-app-configuration
   ms.topic: landing-page
   ms.date: 02/03/2020
-  ms.openlocfilehash: 45b249dbe8e95a063cdeb30c3b7389eb1dcf2001
-  ms.sourcegitcommit: 1756a8a1485c290c46cc40bc869702b8c8454016
+  ms.openlocfilehash: 64a9bc3cf00af66c65b06b9edbed4621668b05bc
+  ms.sourcegitcommit: d4734bc680ea221ea80fdea67859d6d32241aefc
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/09/2020
-  ms.locfileid: "96929533"
+  ms.lasthandoff: 02/14/2021
+  ms.locfileid: "100365023"
 landingContent:
 - title: Azure App Configuration について
   linkLists:
@@ -23,7 +23,7 @@ landingContent:
     - text: 'Azure App Configuration とは '
       url: overview.md
     - text: よく寄せられる質問
-      url: faq.md
+      url: faq.yml
   - linkListType: video
     links:
     - text: Azure App Configuration の概要
@@ -62,6 +62,8 @@ landingContent:
       url: quickstart-azure-functions-csharp.md
     - text: Spring Boot アプリをコーディングする
       url: quickstart-java-spring-app.md
+    - text: Python アプリをコーディングする
+      url: quickstart-python.md
     - text: Azure Resource Manager テンプレート
       url: quickstart-resource-manager.md
   - linkListType: tutorial
