--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: 059d5545c71bef3465dc634f8fdad2396a6d9a7e
-  ms.sourcegitcommit: b39cf769ce8e2eb7ea74cfdac6759a17a048b331
+  ms.openlocfilehash: a2329333268ca6aec0a33794a342f63aa2bda53f
+  ms.sourcegitcommit: d4734bc680ea221ea80fdea67859d6d32241aefc
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/22/2021
-  ms.locfileid: "98681572"
+  ms.lasthandoff: 02/14/2021
+  ms.locfileid: "100379541"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -61,9 +61,6 @@ conceptualContent:
     - url: ./form-recognizer/index.yml
       itemType: overview
       text: Form Recognizer
-    - url: ./ink-recognizer/index.yml
-      itemType: overview
-      text: Ink Recognizer (廃止)
     - url: ../media-services/video-indexer/index.yml
       itemType: overview
       text: Video Indexer
@@ -136,7 +133,7 @@ conceptualContent:
     - url: ./containers/docker-compose-recipe.md
       itemType: get-started
       text: Docker Compose を使用して複数のコンテナーをデプロイする
-    - url: ./containers/container-faq.md
+    - url: ./containers/container-faq.yml
       itemType: reference
       text: Cognitive Services コンテナーに関する FAQ
   - title: ビッグ データの Cognitive Services
