--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -8,12 +8,10 @@
       href: whats-new.md
 - name: クイックスタート
   items:
-    - name: QnA Maker ポータルの使用
-      items:
-        - name: ナレッジ ベースを作成する
-          href: Quickstarts/create-publish-knowledge-base.md
-        - name: ナレッジ ベースにクエリを実行する
-          href: Quickstarts/get-answer-from-knowledge-base-using-url-tool.md
+    - name: QnA Maker ポータルでナレッジ ベースを作成する
+      href: Quickstarts/create-publish-knowledge-base.md
+    - name: REST API を使用してナレッジ ベースにクエリを実行する
+      href: Quickstarts/get-answer-from-knowledge-base-using-url-tool.md
     - name: クライアント ライブラリまたは REST API の使用
       href: Quickstarts/quickstart-sdk.md
 - name: チュートリアル
@@ -38,6 +36,8 @@
     - name: 開発ライフサイクル
       href: Concepts/development-lifecycle-knowledge-base.md
       displayName: 'version control, test, index, publish, monitor usage, create'
+    - name: 正確な回答
+      href: reference-precise-answering.md
     - name: ベスト プラクティス
       href: Concepts/best-practices.md
       displayName: 'tag, rank, score, threshold, question, alternate, filter, synonym, answer, active learning, collaborate, alteration, metadata, bot, personality, extraction, chit-chat'
@@ -50,6 +50,13 @@
       displayName: 'azure, resource, key, upgrade, pricing, tier,'
     - name: QnA Maker のリソース アクセスを管理する
       href: How-To/manage-qna-maker-app.md
+    - name: ナレッジ ベースを強化するようアクティブ ラーニングを設定する
+      items:
+        - name: アクティブ ラーニングを有効にする
+          href: How-To/use-active-learning.md
+        - name: 推奨される代わりの質問の取得
+          href: How-to/improve-knowledge-base.md
+          displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
     - name: アクティブ ラーニングを有効にする
       href: How-To/use-active-learning.md
     - name: ナレッジ ベースの管理
@@ -86,16 +93,10 @@
       href: Overview/language-support.md
     - name: 制限
       href: limits.md
-    - name: Azure ロールベースのアクセス制御 (Azure RBAC)
-      href: Concepts/role-based-access-control.md
-    - name: アクティブ ラーニング
-      href: Concepts/active-learning-suggestions.md
     - name: 信頼度スコア
       href: Concepts/confidence-score.md
     - name: トラブルシューティング
       href: troubleshooting.md
-    - name: 正確な回答
-      href: reference-precise-answering.md
     - name: セキュリティで保護された SharePoint ファイルの追加
       href: How-To/add-sharepoint-datasources.md
       displayName: 'Sharepoint, secure, AAD, azure directory, admin, permission, authorization, file, authentication'
