--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -278,8 +278,16 @@
         - name: 開発環境をセットアップする
           displayName: 'local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB'
           href: how-to-configure-environment.md
-        - name: Jupyter ノートブックの実行
-          href: how-to-run-jupyter-notebooks.md
+        - name: スタジオ環境の設定
+          items:
+            - name: ファイルの作成と管理
+              href: how-to-manage-files.md
+              displayName: 'Jupyter, notebooks, clone, samples'
+            - name: Jupyter ノートブックの実行
+              href: how-to-run-jupyter-notebooks.md
+            - name: ターミナルの使用
+              href: how-to-access-terminal.md
+              displayName: 'git, github, clone, kernel, package'
         - name: ソフトウェア環境をセットアップする
           displayName: 'pip, Conda, anaconda'
           href: how-to-use-environments.md
