--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -132,7 +132,7 @@
                   href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 管理操作の承認
               href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Security
+        - name: セキュリティ
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -147,14 +147,10 @@
                   href: encryption-customer-provided-keys.md
                 - name: 暗号化スコープ
                   href: encryption-scope-overview.md
-            - name: 不変 BLOB
-              href: storage-blob-immutable-storage.md
             - name: Azure プライベート エンドポイントの使用
               href: ../common/storage-private-endpoints.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: ネットワーク ルーティング設定の構成
               href: ../common/network-routing-preference.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: データの冗長性
-          href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: データ保護
           items:
             - name: バージョン管理
@@ -169,6 +165,14 @@
               href: storage-blob-change-feed.md
             - name: ポイントインタイム リストア
               href: point-in-time-restore-overview.md
+            - name: 不変 BLOB
+              href: storage-blob-immutable-storage.md
+        - name: 冗長性とディザスター リカバリー
+          items:
+            - name: データの冗長性
+              href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 顧客が管理する、ディザスター リカバリーのためのフェールオーバー
+              href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: オブジェクト レプリケーション
           href: object-replication-overview.md
         - name: アクセスとパフォーマンスのレベル
@@ -181,8 +185,6 @@
               href: storage-blob-performance-tiers.md
             - name: アクセス層のライフサイクルの自動化
               href: storage-lifecycle-management-concepts.md
-        - name: ディザスター リカバリーとフェールオーバー
-          href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: パフォーマンス、スケーリング、コストの最適化
           items:
             - name: パフォーマンスとスケーラビリティのチェックリスト
@@ -391,15 +393,7 @@
                       href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 脅威保護のために Azure Defender を構成する
               href: ../common/azure-defender-storage-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 不変ポリシーの設定と管理
-              href: storage-blob-immutability-policies-manage.md
-        - name: データの冗長性を管理する
-          items:
-            - name: 冗長構成の変更
-              href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 高可用性アプリケーションの設計
-              href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: データを保護する
+        - name: BLOB データの保護
           items:
             - name: BLOB のバージョン管理を有効にする
               href: versioning-enable.md
@@ -413,14 +407,20 @@
               href: storage-blob-change-feed-how-to.md
             - name: ポイントインタイム リストアを有効にする
               href: point-in-time-restore-manage.md
-        - name: オブジェクト レプリケーションの構成
-          href: object-replication-configure.md
-        - name: ディザスター リカバリーの管理
+            - name: 不変ポリシーの設定と管理
+              href: storage-blob-immutability-policies-manage.md
+        - name: 冗長性とフェールオーバーの管理
           items:
+            - name: 冗長構成の変更
+              href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 高可用性アプリケーションの設計
+              href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 最終同期時刻プロパティを確認する
               href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: アカウントのフェールオーバーを開始する
               href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: オブジェクト レプリケーションの構成
+          href: object-replication-configure.md
         - name: コンカレンシーの管理
           href: concurrency-manage.md
         - name: ストレージ エミュレーターを使用する
@@ -667,7 +667,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: Security
+        - name: セキュリティ
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
