--- a/articles/defender-for-iot/TOC.yml
+++ b/articles/defender-for-iot/TOC.yml
@@ -20,23 +20,29 @@
           href: getting-started.md
     - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
-        - name: Azure RTOS 用のセキュリティ モジュールを構成する
-          href: quickstart-azure-rtos-security-module.md
         - name: Defender for IoT エージェントベースのソリューションにオンボードする
+          displayName: 'IoT Hub, existing, enable'
           href: quickstart-onboard-iot-hub.md
+        - name: Defender for IoT マイクロ エージェントをインストールする (プレビュー)
+          displayName: 'package, authentication, methods, certificate, authenticate, version'
+          href: quickstart-standalone-agent-binary-installation.md
         - name: Defender for IoT マイクロ エージェントのモジュール ツインを作成する (プレビュー)
           href: quickstart-create-micro-agent-module-twin.md
-        - name: Defender for IoT マイクロ エージェントをインストールする (プレビュー)
-          href: quickstart-standalone-agent-binary-installation.md
         - name: ソース コードから Defender for IoT マイクロ エージェントを構築する (プレビュー)
+          displayName: 'baseline, configuration, customize, distribution'
           href: quickstart-building-the-defender-micro-agent-from-source.md
+        - name: Azure RTOS 用のセキュリティ モジュールを構成する
+          href: quickstart-azure-rtos-security-module.md
         - name: IoT ソリューションへの Azure リソースの追加
+          displayName: 'resources, monitored, resource'
           href: quickstart-configure-your-solution.md
         - name: クラシック
           items:
             - name: セキュリティ エージェントの概要
+              displayName: 'platforms, C, C#, agent,'
               href: security-agent-architecture.md
             - name: azureiotsecurity モジュール ツインを作成する
+              displayName: 'module twin, security module'
               href: quickstart-create-security-twin.md
 - name: 概念
   items:
@@ -47,16 +53,21 @@
     - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
         - name: エージェント ポートフォリオの概要と OS サポート (プレビュー)
+          displayName: 'standalone agent, micro agent, RTOS'
           href: concept-agent-portfolio-overview-os-support.md
         - name: スタンドアロンのマイクロ エージェントの概要 (プレビュー)
+          displayName: 'endpoint, posture, distribution, flexible, model'
           href: concept-standalone-micro-agent-overview.md
         - name: セキュリティ エージェントの認証 (プレビュー)
+          displayName: 'connection string, certificate, authentication'
           href: concept-security-agent-authentication.md
         - name: セキュリティ体制 - CIS ベンチマーク
           href: concept-security-posture.md
         - name: イベントの集計 (プレビュー)
+          displayName: 'process events, network connection'
           href: concept-event-aggregation.md
         - name: セキュリティのアラート
+          displayName: 'binary command line, disable firewall, port forwarding detection, possible attempt to disable auditd logging detected, reverse shells, successful bruteforce attempt, successful local login, web shell, Behavior similar, Crypto coin, suspicious, Exposed Docker,'
           href: concept-security-alerts.md
         - name: カスタム セキュリティ アラート
           href: concept-customizable-security-alerts.md
@@ -65,18 +76,23 @@
         - name: クラシック
           items:
             - name: セキュリティ モジュール
+              displayName: 'device twins, security module twin'
               href: concept-security-module.md
             - name: Edge のセキュリティ モジュール
               href: security-edge-architecture.md
             - name: セキュリティ エージェント
               href: overview-security-agents.md
             - name: セキュリティ エージェントの認証
+              displayName: 'method, C, C#, module, device, installation, authentication'
               href: concept-security-agent-authentication-methods.md
             - name: ベースライン
+              displayName: 'custom, setting, properties'
               href: concept-baseline.md
             - name: Azure Defender for IoT 用の Azure セキュリティ ベースライン
+              displayName: 'identity management, active directory, privileged access, data protection, asset management, incident response, posture, vulnerability, governance'
               href: security-baseline.md
             - name: セキュリティ モジュールの従来のイベントの集計
+              displayName: 'twin, default, configuration, alerts'
               href: event-aggregation.md
 - name: 操作方法ガイド
   items:
@@ -85,52 +101,52 @@
         - name: ネットワークを準備する
           items:
             - name: 必要なアプライアンスを特定する
-              href: how-to-identify-required-appliances.md
               displayName: 'virtual, Dell, HPE, SMB, certified, hardware, deployment'
+              href: how-to-identify-required-appliances.md
             - name: ソフトウェアをインストールする
-              href: how-to-install-software.md
               displayName: 'virtual, Dell, HPE, SMB, certified, hardware, port mirroring, ESXi, install'
+              href: how-to-install-software.md
             - name: ネットワークをセットアップする
-              href: how-to-set-up-your-network.md
               displayName: 'passive, browsers, network access, TAP, switch, mirroring, firewall, SPAN, monitoring, tuning'
+              href: how-to-set-up-your-network.md
         - name: センサーを準備する
           items:
             - name: センサーをオンボードする
-              href: how-to-manage-sensors-on-the-cloud.md
               displayName: 'onboard, cloud, register, activate'
+              href: how-to-manage-sensors-on-the-cloud.md
             - name: センサーをアクティブにしてセットアップする
-              href: how-to-activate-and-set-up-your-sensor.md
               displayName: 'onboard, register, activation, certificate, cloud connected, sign in, login, setup, learning mode, initial'
+              href: how-to-activate-and-set-up-your-sensor.md
         - name: オンプレミス管理コンソールを準備する
           items:
             - name: オンプレミス管理コンソールをアクティブにしてセットアップする
-              href: how-to-activate-and-set-up-your-on-premises-management-console.md
               displayName: 'activate, certificate, sign in, login, setup, initial, committed'
+              href: how-to-activate-and-set-up-your-on-premises-management-console.md
             - name: 高可用性のセットアップ
-              href: how-to-set-up-high-availability.md
               displayName: 'primary, secondary, failover, failback fail, recovery'
+              href: how-to-set-up-high-availability.md
         - name: ユーザーとユーザー アクセスの管理
           items:
             - name: ユーザーの作成と管理
-              href: how-to-create-and-manage-users.md
               displayName: 'Active Directory, roles, permissions'
+              href: how-to-create-and-manage-users.md
             - name: グローバル ユーザー アクセス制御の定義
-              href: how-to-define-global-user-access-control.md
               displayName: 'business unit, site, region'
+              href: how-to-define-global-user-access-control.md
         - name: 監視するトラフィックを制御する
-          href: how-to-control-what-traffic-is-monitored.md
           displayName: 'Windows, Learning, Smart IT Learning, DNS, DHCP, engines, subnets'
+          href: how-to-control-what-traffic-is-monitored.md
         - name: オンプレミス管理コンソールからセンサーを管理する
-          href: how-to-manage-sensors-from-the-on-premises-management-console.md
           displayName: 'disconnect, connect, activation file, sensor backup'
+          href: how-to-manage-sensors-from-the-on-premises-management-console.md
         - name: 個々のセンサーの管理
-          href: how-to-manage-individual-sensors.md
           displayName: 'activation, certificate, connect, timezone time zone, backup, restore, software update, failure'
+          href: how-to-manage-individual-sensors.md
         - name: クラウドでセンサーを管理する
           href: how-to-manage-sensors-on-the-cloud.md
         - name: オンプレミスの管理コンソールを管理する
-          href: how-to-manage-the-on-premises-management-console.md
           displayName: 'activation, certificate, software update, backup, restore, proxy, password recovery'
+          href: how-to-manage-the-on-premises-management-console.md
         - name: 脅威インテリジェンス パッケージを操作する
           href: how-to-work-with-threat-intelligence-packages.md
         - name: デバイスのインベントリ情報を操作する
@@ -174,17 +190,17 @@
         - name: デバイス情報を強化する
           items:
             - name: デバイス通知を操作する
-              href: how-to-work-with-device-notifications.md
               displayName: 'notifications, operating systems, enrich, device information, classification'
+              href: how-to-work-with-device-notifications.md
             - name: ポートと VLAN の名前解決を強化する
-              href: how-to-enhance-port-and-vlan-name-resolution.md
               displayName: 'port, VLAN'
+              href: how-to-enhance-port-and-vlan-name-resolution.md
             - name: デバイス情報をインポートする
-              href: how-to-import-device-information.md
               displayName: 'import, enrich'
+              href: how-to-import-device-information.md
         - name: センサー アクティビティを追跡する
+          displayName: 'timeline, time line, time-line, event'
           href: how-to-track-sensor-activity.md
-          displayName: 'timeline, time line, time-line, event, audit'
         - name: センサーとオンプレミスの管理コンソールのトラブルシューティング
           href: how-to-troubleshoot-the-sensor-and-on-premises-management-console.md
         - name: SNMP MIB の監視を設定する
@@ -206,6 +222,20 @@
               href: integration-splunk.md
     - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
+        - name: Azure Sentinel に接続する
+          displayName: 'log analytics, service notes'
+          href: how-to-configure-with-sentinel.md
+        - name: Azure Defender for IoT エージェントベースのソリューションを構成する
+          displayName: 'data, collection, geolocation, log analytics, raw events'
+          href: how-to-configure-agent-based-solution.md
+        - name: CIS ベンチマークの推奨事項を調査する
+          displayName: 'investigation, queries, investigate'
+          href: how-to-configure-agent-based-solution.md
+        - name: CIS ベンチマークの推奨事項を調査する
+          href: how-to-investigate-cis-benchmark.md
+        - name: カスタム アラートの作成
+          displayName: security group
+          href: quickstart-create-custom-alerts.md
         - name: Azure RTOS 用のセキュリティ モジュール
           href: iot-security-azure-rtos.md
           items:
@@ -215,18 +245,6 @@
               href: concept-rtos-security-module.md
             - name: Azure RTOS 用のセキュリティ モジュールのアラートと推奨事項
               href: concept-rtos-security-alerts-recommendations.md
-        - name: Azure Sentinel に接続する
-          href: how-to-configure-with-sentinel.md
-        - name: Azure Defender for IoT エージェントベースのソリューションを構成する
-          href: how-to-configure-agent-based-solution.md
-        - name: CIS ベンチマークの推奨事項を調査する
-          href: how-to-investigate-cis-benchmark.md
-        - name: セキュリティに関する推奨事項の調査
-          href: quickstart-investigate-security-recommendations.md
-        - name: セキュリティ アラートについて調査する
-          href: quickstart-investigate-security-alerts.md
-        - name: カスタム アラートの作成
-          href: quickstart-create-custom-alerts.md
         - name: クラシック
           items:
             - name: デプロイが推奨されるエージェント
@@ -250,20 +268,25 @@
             - name: Edge のセキュリティ モジュールをデプロイする
               href: how-to-deploy-edge.md
             - name: セキュリティ エージェントを構成する
+              displayName: property
               href: how-to-agent-configuration.md
             - name: 独自のセキュリティ メッセージを送信する
               href: how-to-send-security-messages.md
             - name: 未加工のセキュリティ データにアクセスする
+              displayName: 'log analytics, alerts,'
               href: how-to-security-data-access.md
             - name: デバイスを調査する
+              displayName: 'access, data, kql, ports, logins, process'
               href: how-to-investigate-device.md
 - name: トラブルシューティング
   items:
     - name: Defender for IoT マイクロ エージェントのトラブルシューティング (プレビュー)
+      displayName: 'service status, review logs'
       href: troubleshoot-defender-micro-agent.md
 - name: 機能のサポートと廃止
   items:
     - name: 機能のサポートと廃止
+      displayName: 'C, C#, deprecation, support'
       href: edge-security-module-deprecation.md
 - name: 関連項目
   items:
@@ -279,18 +302,21 @@
           href: references-work-with-defender-for-iot-cli-commands.md
         - name: 独自のプロトコルを管理する (Horizon)
           href: resources-manage-proprietary-protocols.md
-        - name: Defender for IoT の用語集
-          href: references-defender-for-iot-glossary.md
     - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
         - name: Azure RTOS 用のセキュリティ モジュール API
+          displayNAme: 'prototype, disable'
           href: azure-rtos-security-module-api.md
         - name: よく寄せられる質問 - サービス
+          displayName: 'regulation, internet, connection, hardware, appliances, ports, logs'
           href: resources-frequently-asked-questions.md
         - name: よく寄せられる質問 - エージェント
+          displayName: 'embedded, dependencies, data, quota, internet,'
           href: resources-agent-frequently-asked-questions.md
         - name: Azure のロードマップ
           href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
+    - name: Defender for IoT の用語集
+      href: references-defender-for-iot-glossary.md
 - name: リソース
   items:
     - name: デバイス ビルダー向けのエージェントベースのソリューション
