--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -7,7 +7,7 @@
     - name: ベスト プラクティス
       href: howto-best-practices.md
     - name: よく寄せられる質問
-      href: faq.md
+      href: faq.yml
 - name: クイックスタート
   expanded: true
   items:
