commit translated contents

--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   ms.date: 01/28/2020
-  ms.openlocfilehash: 389cd8b9812048bd8156201926dbba007b2cc983
-  ms.sourcegitcommit: 52e3d220565c4059176742fcacc17e857c9cdd02
+  ms.openlocfilehash: acf02fcb0d827228bf6709fd871d1248e895f9fd
+  ms.sourcegitcommit: de98cb7b98eaab1b92aa6a378436d9d513494404
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/21/2021
-  ms.locfileid: "98660171"
+  ms.lasthandoff: 02/17/2021
+  ms.locfileid: "100555089"
 landingContent:
 - title: Azure AD B2C
   linkLists:
@@ -54,7 +54,7 @@ landingContent:
     - text: セルフサービス サインインを有効にする
       url: user-flow-overview.md
     - text: ソーシャルおよび職場の ID を追加する:OIDC/OAuth2/SAML
-      url: tutorial-add-identity-providers.md
+      url: add-identity-provider.md
     - text: シングル サインオン (SSO) を有効にする
       url: session-behavior.md
     - text: UI/UX をカスタマイズする
