--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -174,6 +174,8 @@
           href: security-baseline.md
         - name: Azure Policy によるセキュリティ制御
           href: ./security-controls-policy.md
+        - name: データの暗号化
+          href: concept-data-encryption.md
     - name: 信頼できる ML
       items:
         - name: 信頼できる ML の概要
