--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -55,8 +55,10 @@
       href: disaster-recovery.md
 - name: リファレンス
   items:
-    - name: REST API
-      href: 'https://docs.microsoft.com/rest/api/formrecognizer/'
+    - name: Form Recognizer API v2.1 プレビュー
+      href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-2/operations/AnalyzeBusinessCardAsync'
+    - name: Form Recognizer API v2.0
+      href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm'
     - name: SDK
       items:
         - name: .NET
