--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -832,6 +832,22 @@ groups:
     title: Python
   - id: programming-language-swift
     title: Swift
+- id: acs-js-csharp-java-python-swift-android
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-swift
+    title: Swift
+  - id: programming-language-android
+    title: Android
 - id: acs-web-ios-android
   title: プラットフォーム
   prompt: プラットフォームの選択
@@ -1009,9 +1025,9 @@ groups:
   - id: rest
     title: REST
 metadata:
-  ms.openlocfilehash: 79b9f9d871ffd5d410dd00b7dfbc1aca8fc98c4a
-  ms.sourcegitcommit: 2501fe97400e16f4008449abd1dd6e000973a174
+  ms.openlocfilehash: ef70d77eb7d22542d2e03131beb99980ee07b78b
+  ms.sourcegitcommit: 227b9a1c120cd01f7a39479f20f883e75d86f062
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 02/08/2021
-  ms.locfileid: "99820808"
+  ms.lasthandoff: 02/18/2021
+  ms.locfileid: "100651920"
