--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -72,7 +72,7 @@
                   href: data-box-system-requirements-rest.md
             - name: 制限を理解する
               href: data-box-limits.md
-            - name: セキュリティ
+            - name: Security
               items:
                 - name: セキュリティ ベースライン
                   href: security-baseline.md
@@ -243,6 +243,8 @@
           href: /powershell/module/az.databox
         - name: .NET API
           href: /dotnet/api/overview/azure/databox/management
+        - name: .NET SDK
+          href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.DataBox/'
         - name: Azure Policy の組み込み
           displayName: 'samples, policies, definitions'
           href: ./policy-reference.md
